// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Kit/Button Outline Blue 1`] = `
<div
  className="sb-flex-column sb-align-start sb-w-max-content sb-items-mb-2"
>
  <button
    className="button buttonOutlineBlueVariant buttonLargeSize"
    tabIndex={0}
    type="button"
  >
    Button Label
  </button>
  <button
    className="button buttonOutlineBlueVariant buttonMediumSize"
    tabIndex={0}
    type="button"
  >
    Button Label
  </button>
  <button
    className="button buttonOutlineBlueVariant buttonSmallSize"
    tabIndex={0}
    type="button"
  >
    Button Label
  </button>
  <button
    className="button buttonOutlineBlueVariant buttonXsmallSize"
    tabIndex={0}
    type="button"
  >
    Button Label
  </button>
  <button
    className="button buttonDisabled buttonOutlineBlueVariant buttonLargeSize"
    disabled={true}
    tabIndex={0}
    type="button"
  >
    Button Label
  </button>
  <button
    className="button buttonDisabled buttonOutlineBlueVariant buttonMediumSize"
    disabled={true}
    tabIndex={0}
    type="button"
  >
    Button Label
  </button>
  <button
    className="button buttonDisabled buttonOutlineBlueVariant buttonSmallSize"
    disabled={true}
    tabIndex={0}
    type="button"
  >
    Button Label
  </button>
  <button
    className="button buttonDisabled buttonOutlineBlueVariant buttonXsmallSize"
    disabled={true}
    tabIndex={0}
    type="button"
  >
    Button Label
  </button>
  <button
    aria-disabled="true"
    className="button buttonDisabled buttonOutlineBlueVariant buttonLargeSize"
    tabIndex={0}
    type="button"
  >
    Visually Disabled
  </button>
  <button
    aria-disabled="true"
    className="button buttonDisabled buttonOutlineBlueVariant buttonMediumSize"
    tabIndex={0}
    type="button"
  >
    Visually Disabled
  </button>
  <button
    aria-disabled="true"
    className="button buttonDisabled buttonOutlineBlueVariant buttonSmallSize"
    tabIndex={0}
    type="button"
  >
    Visually Disabled
  </button>
  <button
    aria-disabled="true"
    className="button buttonDisabled buttonOutlineBlueVariant buttonXsmallSize"
    tabIndex={0}
    type="button"
  >
    Visually Disabled
  </button>
</div>
`;

exports[`Storyshots UI Kit/Button Outline Blue With Icon 1`] = `
<div
  className="sb-flex-column sb-align-start sb-w-max-content sb-items-mb-2"
>
  <button
    className="button buttonOutlineBlueVariant buttonLargeSize"
    tabIndex={0}
    type="button"
  >
    <svg
      className="leftIcon"
      fill="none"
      height="10"
      viewBox="0 0 10 10"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 1V9"
        stroke="currentColor"
        strokeLinecap="square"
        strokeWidth="2"
      />
      <path
        d="M1 5H9"
        stroke="currentColor"
        strokeLinecap="square"
        strokeWidth="2"
      />
    </svg>
    Button Label
  </button>
  <button
    className="button buttonOutlineBlueVariant buttonMediumSize"
    tabIndex={0}
    type="button"
  >
    <svg
      className="leftIcon"
      fill="none"
      height="10"
      viewBox="0 0 10 10"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 1V9"
        stroke="currentColor"
        strokeLinecap="square"
        strokeWidth="2"
      />
      <path
        d="M1 5H9"
        stroke="currentColor"
        strokeLinecap="square"
        strokeWidth="2"
      />
    </svg>
    Button Label
  </button>
  <button
    className="button buttonOutlineBlueVariant buttonSmallSize"
    tabIndex={0}
    type="button"
  >
    <svg
      className="leftIcon"
      fill="none"
      height="10"
      viewBox="0 0 10 10"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 1V9"
        stroke="currentColor"
        strokeLinecap="square"
        strokeWidth="2"
      />
      <path
        d="M1 5H9"
        stroke="currentColor"
        strokeLinecap="square"
        strokeWidth="2"
      />
    </svg>
    Button Label
  </button>
  <button
    className="button buttonOutlineBlueVariant buttonXsmallSize"
    tabIndex={0}
    type="button"
  >
    <svg
      className="leftIcon"
      fill="none"
      height="10"
      viewBox="0 0 10 10"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 1V9"
        stroke="currentColor"
        strokeLinecap="square"
        strokeWidth="2"
      />
      <path
        d="M1 5H9"
        stroke="currentColor"
        strokeLinecap="square"
        strokeWidth="2"
      />
    </svg>
    Button Label
  </button>
  <button
    className="button buttonDisabled buttonOutlineBlueVariant buttonLargeSize"
    disabled={true}
    tabIndex={0}
    type="button"
  >
    <svg
      className="leftIcon"
      fill="none"
      height="10"
      viewBox="0 0 10 10"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 1V9"
        stroke="currentColor"
        strokeLinecap="square"
        strokeWidth="2"
      />
      <path
        d="M1 5H9"
        stroke="currentColor"
        strokeLinecap="square"
        strokeWidth="2"
      />
    </svg>
    Button Label
  </button>
  <button
    className="button buttonDisabled buttonOutlineBlueVariant buttonMediumSize"
    disabled={true}
    tabIndex={0}
    type="button"
  >
    <svg
      className="leftIcon"
      fill="none"
      height="10"
      viewBox="0 0 10 10"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 1V9"
        stroke="currentColor"
        strokeLinecap="square"
        strokeWidth="2"
      />
      <path
        d="M1 5H9"
        stroke="currentColor"
        strokeLinecap="square"
        strokeWidth="2"
      />
    </svg>
    Button Label
  </button>
  <button
    className="button buttonDisabled buttonOutlineBlueVariant buttonSmallSize"
    disabled={true}
    tabIndex={0}
    type="button"
  >
    <svg
      className="leftIcon"
      fill="none"
      height="10"
      viewBox="0 0 10 10"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 1V9"
        stroke="currentColor"
        strokeLinecap="square"
        strokeWidth="2"
      />
      <path
        d="M1 5H9"
        stroke="currentColor"
        strokeLinecap="square"
        strokeWidth="2"
      />
    </svg>
    Button Label
  </button>
  <button
    className="button buttonDisabled buttonOutlineBlueVariant buttonXsmallSize"
    disabled={true}
    tabIndex={0}
    type="button"
  >
    <svg
      className="leftIcon"
      fill="none"
      height="10"
      viewBox="0 0 10 10"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 1V9"
        stroke="currentColor"
        strokeLinecap="square"
        strokeWidth="2"
      />
      <path
        d="M1 5H9"
        stroke="currentColor"
        strokeLinecap="square"
        strokeWidth="2"
      />
    </svg>
    Button Label
  </button>
  <button
    aria-disabled="true"
    className="button buttonDisabled buttonOutlineBlueVariant buttonLargeSize"
    tabIndex={0}
    type="button"
  >
    <svg
      className="leftIcon"
      fill="none"
      height="10"
      viewBox="0 0 10 10"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 1V9"
        stroke="currentColor"
        strokeLinecap="square"
        strokeWidth="2"
      />
      <path
        d="M1 5H9"
        stroke="currentColor"
        strokeLinecap="square"
        strokeWidth="2"
      />
    </svg>
    Visually Disabled
  </button>
  <button
    aria-disabled="true"
    className="button buttonDisabled buttonOutlineBlueVariant buttonMediumSize"
    tabIndex={0}
    type="button"
  >
    <svg
      className="leftIcon"
      fill="none"
      height="10"
      viewBox="0 0 10 10"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 1V9"
        stroke="currentColor"
        strokeLinecap="square"
        strokeWidth="2"
      />
      <path
        d="M1 5H9"
        stroke="currentColor"
        strokeLinecap="square"
        strokeWidth="2"
      />
    </svg>
    Visually Disabled
  </button>
  <button
    aria-disabled="true"
    className="button buttonDisabled buttonOutlineBlueVariant buttonSmallSize"
    tabIndex={0}
    type="button"
  >
    <svg
      className="leftIcon"
      fill="none"
      height="10"
      viewBox="0 0 10 10"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 1V9"
        stroke="currentColor"
        strokeLinecap="square"
        strokeWidth="2"
      />
      <path
        d="M1 5H9"
        stroke="currentColor"
        strokeLinecap="square"
        strokeWidth="2"
      />
    </svg>
    Visually Disabled
  </button>
  <button
    aria-disabled="true"
    className="button buttonDisabled buttonOutlineBlueVariant buttonXsmallSize"
    tabIndex={0}
    type="button"
  >
    <svg
      className="leftIcon"
      fill="none"
      height="10"
      viewBox="0 0 10 10"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 1V9"
        stroke="currentColor"
        strokeLinecap="square"
        strokeWidth="2"
      />
      <path
        d="M1 5H9"
        stroke="currentColor"
        strokeLinecap="square"
        strokeWidth="2"
      />
    </svg>
    Visually Disabled
  </button>
</div>
`;
